@@ -45,4 +45,6 @@ public class Main extends Application {
     public static void main(String[] args) {
         launch(args);
     }
+
+    //--module-path="C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml --add-modules javafx.controls,javafx.media
 }
